# JEROTI

./: .gitignore  Makefile  README.md  actions.py  battery_info.py  cli.py  collect.py  main.py  memory_info.py  platform_info.py  power.py  pyproject.toml  runner.py  server.py  server2.py  setup.py  simple_online.py  train.py
data/: 5seconds-2025-11-26_01-23-15.csv
docs/: Makefile  conf.py  index.rst  make.bat
model/: ADA_26UZ0N_20251201003057.json  ADA_26UZ0N_20251201003057.pkl  ADA_8RGO3X_20251201003358.json  ADA_8RGO3X_20251201003358.pkl  DBSCAN_6THHGL_20251126012343.json  DBSCAN_6THHGL_20251126012343.pkl  DBSCAN_6VA58X_20251201003357.json  DBSCAN_6VA58X_20251201003357.pkl  DBSCAN_HWHJJW_20251201003056.json  DBSCAN_HWHJJW_20251201003056.pkl  ISO_54YU38_20251126012343.json  ISO_54YU38_20251126012343.pkl  ISO_9QKBWQ_20251201003357.json  ISO_9QKBWQ_20251201003357.pkl  ISO_H9W3CU_20251201003057.json  ISO_H9W3CU_20251201003057.pkl
notebooks/: EDA.ipynb  EDA2.ipynb  Evaluation.ipynb  Evaluation2.ipynb  LabelledData_EDA3.ipynb  ModelTraining.ipynb  ModelTraining2.ipynb  SupervisedModelTraining.ipynb  UnlabelledData_EDA.ipynb  UnsupervisedModelTraining.ipynb
src/: cli.py  collect.py  main.py  runner.py  train.py
src/data/: 10seconds-2025-11-27_23-51-43.csv  10seconds-2025-11-29_01-34-35.csv  5seconds-2025-11-27_23-58-54.csv  5seconds-2025-11-27_23-58-54.json  5seconds-2025-11-28_00-06-31.csv  collect.py
src/models/: AdaBoost.py  DBSA.py  IsolationForest.py
src/training/: IsolationForest.py
src/visualization/: visualize.ipynb
training/: DBSA.py
