[project]
name = "jeroti"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "import-ipynb>=0.2",
    "ipynb>=0.5.1",
    "joblib>=1.5.2",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "river",
    "rrcf>=0.4.4",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sse-starlette>=3.0.3",
    "uvicorn>=0.38.0",
]

[tool.uv.workspace]
members = [
    "venv",
]
